--- a/_posts/2018-03-27-在写博客之前.md
+++ b/_posts/2018-03-27-在写博客之前.md
@@ -8,14 +8,14 @@ tag: 日常
 
 在选取博客名称的时候，我想到了最近重读的一本老书《历史的尘埃》。其字里行间充斥着那种理想主义者对宿命的愤懑与无奈，虽然语言流畅清新，读来却使人愁肠百折。但就其主旨，我比较赞同一位书友所说的
 >历史的尘埃，这本书的核心，我觉着是这么一句话： \
-天地不仁，以万物为刍狗 \
-那么知道这一点之后又该怎么办呢？作者在故事里告诉我：\
-天行健，君子以自强不息\
-但如果自强不息最后只是自欺欺人呢？小说的最后，一个答案油然而出：\
-地势坤，君子以厚德载物\
-这就是我看历史的尘埃时的感受。\
-*作者：dhew*\
-*链接：https://www.zhihu.com/question/24060449/answer/45480970*\
+天地不仁，以万物为刍狗  
+那么知道这一点之后又该怎么办呢？作者在故事里告诉我： 
+天行健，君子以自强不息  
+但如果自强不息最后只是自欺欺人呢？小说的最后，一个答案油然而出： 
+地势坤，君子以厚德载物  
+这就是我看历史的尘埃时的感受。  
+*作者：dhew*  
+*链接：https://www.zhihu.com/question/24060449/answer/45480970*  
 *来源：知乎*
 
 于是突兀却又自然地想到了“行路难”这个诗名。
