--- a/_posts/2018-03-27-在写博客之前.md
+++ b/_posts/2018-03-27-在写博客之前.md
@@ -7,7 +7,7 @@ tag: 日常
 最近阅读别人的技术博客时，因为自己比较新手，很多常识性的东西不了解内涵，导致阅读文章的障碍。于是决定自己开一个博客，用于记录解决过的技术问题。我会尽量解释得很通俗，希望能帮助其他和我一样的新手理解技术问题。“技术是潇洒的艺术”，不知道从哪里看到这个句子，觉得有趣，就一直念念叨叨到现在，顺手就取做了副标题。
 
 在选取博客名称的时候，我想到了最近重读的一本老书《历史的尘埃》。其字里行间充斥着那种理想主义者对宿命的愤懑与无奈，虽然语言流畅清新，读来却使人愁肠百折。但就其主旨，我比较赞同一位书友所说的
->历史的尘埃，这本书的核心，我觉着是这么一句话： \
+>历史的尘埃，这本书的核心，我觉着是这么一句话： 
 天地不仁，以万物为刍狗  
 那么知道这一点之后又该怎么办呢？作者在故事里告诉我： 
 天行健，君子以自强不息  
