--- a/_posts/2018-03-27-在写博客之前.md
+++ b/_posts/2018-03-27-在写博客之前.md
@@ -14,7 +14,8 @@ tag: 日常
 但如果自强不息最后只是自欺欺人呢？小说的最后，一个答案油然而出：  
 地势坤，君子以厚德载物  
 这就是我看历史的尘埃时的感受。  
-*作者：dhew*  
+>
+>*作者：dhew*  
 *链接：https://www.zhihu.com/question/24060449/answer/45480970*  
 *来源：知乎*
 
