--- a/_posts/2018-09-11-开学杂念2.md
+++ b/_posts/2018-09-11-开学杂念2.md
@@ -5,4 +5,8 @@ tag: 日常
 ---
 过了几天的正常日子后，生活不可避免地又滑向苟且。课题进度的滞后，又无人可问，再加上身边优秀的同学的衬托，让我感到无比沮丧颓唐。笨口拙舌的我简直想再次躲起来，避免与他人交往。PEREC 的师兄在群里计划组织新生见面会，我坐在教研室的位置上看着信息习惯性地走神，琢磨着要不要立马先选一门恰好在新生见面会的时间上的课，躲过这阵子再把这门课退了。这时师兄突然从后面拍我的背，用他那特有的激动、急促又略有腼腆的语调，遗憾地问我：“你们周五下午都有什么课啊，为什么那么多人没空？”我像突然被人戳破了想法似的，嗯嗯啊啊地说不出话。他见我的反应，便知我与那些有课的家伙不是一伙的，也就没多说什么。我才如梦初醒。
 
-其实我总是与现实脱节的一个原因是，我是个路径依赖十分强烈的人。我总是过于在乎一件事的形式而非他的本质。比如科研，不到最后关头我不会将课题真正放在心上，而是满足于坐在办公室无所事事熬到11点。
+我总是活着活着就变得沉闷，慢慢地与周围环境脱节。在我的潜意识里，一切都是一成不变的，之前怎么做，现在还是可以怎么做；之前怎么说，现在还是可以怎么说。然而合适的话题总是会不断改变的，慢慢的我在别人的眼里就会变得无趣，我能感受到他人的这种态度，于是更加消极避世。
+
+我总是与现实脱节的一个原因是，我是个路径依赖十分强烈的人。我总是过于在乎一件事的形式而非他的本质。比如科研，不到最后关头我不会将课题真正放在心上，而是满足于坐在办公室无所事事熬到11点。
+
+所以对我来说，一个强有力的竞争对手是十分重要的。我需要这种鲇鱼效应来是我摆脱这种“凝固状态”，哪怕只是暂时的。这就像顶着不断向后的潮头，奋力向前。
