--- a/_posts/2018-09-15-Simplis 软件使用入门.md
+++ b/_posts/2018-09-15-Simplis 软件使用入门.md
@@ -9,7 +9,7 @@ Simplis 软件有着齐全的[说明文档](https://www.simplistechnologies.com/
 
 1. POP Threshold 位于 0 到输入电压之间
 2. F8 - Maximum Period 略大于最大频率对应的周期
-3. Error 5039，仿真不收敛时，如果电路中有三阶 Laplace 模块，可以试着将它分解成一个一阶 Laplace 和一个二阶 Laplace 的串联，减少参数误差对病态系统的影响。这里感谢程师兄对我的指点，解决了困扰我很久的一个仿真问题。
+3. Error 5039，仿真不收敛时，如果电路中有三阶 Laplace 模块，可以试着将它分解成一个一阶 Laplace 和一个二阶 Laplace 的串联，减少参数误差对病态系统的影响。这里感谢和我同姓的师兄对我的指点，解决了困扰我很久的一个仿真问题。
 
 参考文献：
 1. https://www.simplistechnologies.com/
