--- a/_posts/2018-09-26-李卫公在长安.md
+++ b/_posts/2018-09-26-李卫公在长安.md
@@ -8,3 +8,5 @@ tag: 书评
 我常常想起李卫公。在食堂吃饭的时候，在一片喧嚣之中，耳机中放着钢琴曲，我却体会着李卫公的那种心情：那时他满怀才能和抱负，苦苦寻找着出人头地的机会，却只能每天徘徊在长安城臭气熏天的路上，与流氓为伍。卫公后来算是部分的实现了他的愿望了，哪怕与他原本的设想有所出入。但一些细节在我心中已经模糊了。他是怎么遇见红拂的呢？他的费尔马证出来了吗？
 
 长安在古时是一个充满梦想的地方。世界的中心，帝国的心脏。时过境迁，今天它没有了当初的繁华，只有一点没有变化：卫公建的长安城是灰色的，现在它仍然是灰色的。卫公在长安城时满怀梦想，然而把梦想揭开，一切都无可避免地走向庸俗。
+
+坐我斜对面的阿姨叫醒了我。我的袖子沾上了桌子上的油，我却浑然未觉。尴尬。卫公在长安时，也有像我这样的时刻吗？
