--- a/_posts/2018-09-26-李卫公在长安.md
+++ b/_posts/2018-09-26-李卫公在长安.md
@@ -9,4 +9,4 @@ tag: 书评
 
 长安在古时是一个充满梦想的地方。世界的中心，帝国的心脏。时过境迁，今天它没有了当初的繁华，只有一点没有变化：卫公建的长安城是灰色的，现在它仍然是灰色的。卫公在长安城时满怀梦想，然而把梦想揭开，一切都无可避免地走向庸俗。
 
-坐我斜对面的阿姨叫醒了我。我的袖子沾上了桌子上的油，我却浑然未觉。尴尬。卫公在长安时，也有像我这样的时刻吗？
+坐我斜对面的阿姨叫醒了我。我的袖子沾上了桌子上的油，我却浑然未觉。真是尴尬。卫公在长安时，也有像我这样的时刻吗？
