--- a/_posts/2018-10-03-《算法之美》书评（一）.md
+++ b/_posts/2018-10-03-《算法之美》书评（一）.md
@@ -3,3 +3,14 @@ layout: post
 title: 《算法之美》书评（一）
 tag: 书评
 ---
+_Algorithms to Live By_ 是最近很流行的一本关于算法的通俗读物。从广义上来说，生活中的决策过程，都可以从算法的角度来复现。而复现的关键，就在于对事件参数的正确估计。
+
+例如第一章的最优停止问题中，影响“停止收集数据，开始抉择的时间点”的最重要的三个因素是：
+
+1. 候选对象是否绝对同意
+2. 是否可以回头选择
+3. 是否具有事件成本
+
+另外，候选人之间是具有清晰的排名数据，还是只有粗略的相互比较之间的优劣，同样会对结果造成影响。只有最原始的“秘书问题”的最优停止点是37%，其余的情况下需要根据自身经验来确定最优点。因此，即使最优停止问题成为了公众常识，人们的决策方式仍然会有高低之分。
+
+对于个人而言，最优停止问题给我们带来了一个解决问题的思路，那就是：在收集了足够的数据后，选取下一个符合要求的候选。而什么程度的收集算是“足够多”，则取决于个人经验与主观判断。对于社会而言，如果政府能够借鉴最优停止问题的解决思路制定政策（例如收取停车费的多少），如果公众能够普遍建立最优停止问题的思维方式，那么整个社会也许会变得更有效率。
