--- a/_posts/2018-10-03-《算法之美》书评（一）.md
+++ b/_posts/2018-10-03-《算法之美》书评（一）.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 《算法之美》书评（一）
-tag: 书评
+tag: 书评，算法
 ---
 _Algorithms to Live By_ 是最近很流行的一本关于算法的通俗读物。从广义上来说，生活中的决策过程，都可以从算法的角度来复现。而复现的关键，就在于对事件参数的正确估计。
 
