--- a/Recycle bin/2018-11-22-嵌入视频测试.md
+++ b/Recycle bin/2018-11-22-嵌入视频测试.md
@@ -5,3 +5,5 @@ tag: 测试
 ---
 
 <iframe src="https://onedrive.live.com/embed?cid=68ACE52B84886F39&resid=68ACE52B84886F39%21401501&authkey=AKHm5-vTDSfbTbM" width="320" height="180" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+<!-- test -->
